--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta property="og:title" content="Casual Hackathon">
+    <meta property="og:description" content="2025 Sowlmate Casual Hackathon">
+    <meta property="og:image" content="%PUBLIC_URL%/ogimage.png">
+    <meta property="og:url" content="https://swliris.github.io/skku_hackathon_info/">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
